# pypkgs_xy

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypkgs_xy.rst
pypkgs_xy/: pypkgs_xy.py
tests/: test_pypkgs_xy.py
