[tool.poetry]
name = "pypkgs_xy"
version = "0.1.0"
description = "toy Python package for DSCI 524 individual assignment 1 by Xudong Yang"
authors = ["Xudong Yang <xd1222@student.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
